--- a/app/scss/base/_base.scss
+++ b/app/scss/base/_base.scss
@@ -33,6 +33,7 @@ main,
 li {
   display: block;
 }
+h1,h2,h3,h4 {font-weight: 500;}
 
 h1 {font-size: 32px;}
 h2 {font-size: 28px;}
