--- a/app/scss/components/_animations.scss
+++ b/app/scss/components/_animations.scss
@@ -7,7 +7,7 @@ $glow-color: #aaf;
 
 .loader {
   position: absolute;
-  bottom: 10px;
+  top: -75px;
   left: 25px;
   display: flex;
   height: 50px;
