--- a/app/scss/layout/_contact.scss
+++ b/app/scss/layout/_contact.scss
@@ -13,6 +13,7 @@
   a {
     display: inline-block;
     margin: 0 15px;
+    padding: 5px;
   }
   img {
     width: 40px;
