--- a/app/scss/layout/_work.scss
+++ b/app/scss/layout/_work.scss
@@ -15,6 +15,7 @@
 
 
 .work-section {
+  position: relative;
   padding-top: 75px;
   width: 100%;
   background: $black;
